--- a/public/stylesheets/landing.css
+++ b/public/stylesheets/landing.css
@@ -54,7 +54,7 @@ h1 {
     text-align: center;
 }
 
-#shuffle {
+#allCards {
     padding: 10px 0px;
     margin: 0;
     background-color: #2c3e50;
@@ -69,8 +69,10 @@ h1 {
 }
 
 #singleCard {
-    padding: 10px 0px;
-    margin: 0;
+    padding: 20px 40px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 #secondRow {
