--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta charset=”UTF-8"> <meta http-equiv=”X-UA-Compatible” content=”IE=edge”> <meta name=”viewport” content=”width=device-width, initial-scale=1">
         <title>Robots Challenge</title>
         <link rel="stylesheet" text="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="/stylesheets/landing.css">
     </head>
-    <body onLoad="init()">
+    <body>
     <nav class="navbar navbar-custom navbar-expand-sm fixed-top">
         <div class="container-fluid">
             <div class="navbar-header">
@@ -23,7 +23,6 @@
     			    <span class="icon-bar"></span>
     			    <span class="icon-bar"></span>
     			</button>
-                <!--<a href="/" class="navbar-brand">AIA</a>-->
             </div>
         	<div class="collapse navbar-collapse" id="target-collapse">
         	    <ul class="nav navbar-nav navbar-left">
@@ -47,5 +46,6 @@
             integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
             crossorigin="anonymous">
         </script>
-        <script src="/stylesheets/javascript.js"></script>
+        <script type="text/javascript" src="/stylesheets/javascript.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
