--- a/views/singlecard.ejs
+++ b/views/singlecard.ejs
@@ -1,14 +1,14 @@
 <% include ./partials/header %>
 
-        <div class="container">
+<div class="container">
             <div class="jumbotron">
                 <h1>Robots Challenge</h1>
-                <p class="lead">This method uses JavaScript Conditions and jQuery Events to iterate through an array and either pick a random card or shuffle them. </p>
+                <p class="lead">This method uses Request API calls, Express Routing and JavaScript Functions to display the first card of a new deck. </p>
                 <hr class="my-4">
-                <p id="clickAButton">Click a button, any button!</p>
+                <p id="clickAButton">Is this your card?!</p>
                     <div class="row" >
                         <div class="col-lg-4 col-sm-6 col-xs-6">
-                            <a class="btn btn-lg btn-block" id="oneCard" href="/singlecard">Single Card</a>
+                            <a class="btn btn-lg btn-block" id="oneCard" href="/singlecard">Different Card</a>
                         </div>
                         <div class="col-lg-4 col-sm-6">
                         </div>
@@ -19,7 +19,11 @@
                     <div class="row multiple" id="secondRow">
                         <div class="col-lg-4 col-sm-6">
                         </div>
-                        <div class="col-lg-4 col-sm-6" id="single">
+                        <!--location to append singleCard()-->
+                        <div class="col-lg-4 col-sm-6" id="singleCard">
+                            <% data1["cards"].forEach(function(cards) { %>
+                                    <img src = "<%= cards["image"] %>" >
+                            <% }); %>
                         </div>
                         <div class="col-lg-4 col-sm-6">
                         </div>
